# emit

./: .ghci  README.md  default.nix  emit.cabal  hie.yaml  release.nix  shell.nix
examples/emit-ast/: EmitAST.hs  emit-ast.cabal  shell.nix
nix/: pkgs.nix
nix/extensions/: emit-ast.nix  emit.nix
src/Text/: Emit.hs
src/Text/Emit/: Class.hs  Doc.hs  Fuse.hs  Layout.hs  Stage.hs
src/Text/Emit/Doc/: Prim.hs
src/Text/Emit/Layout/: Monad.hs
