cabal-version: 2.4

name:        emit
category:    Data
version:     1.0.0
synopsis:    TODO 
description: TODO

author:       jacob leach
maintainer:   jacobleach@protonmail.com
copyright:    2022, Jacob Leach
homepage:     https://github.com/riz0id/emit
license:      ISC
license-file: LICENSE
build-type:   Simple

tested-with:
  GHC == 9.2.2

extra-source-files:
  CHANGELOG.md
  README.md

source-repository head
  type:     git
  location: https://github.com/riz0id/emit

common common
  default-language: Haskell2010

  default-extensions:
    ImportQualifiedPost MagicHash PatternSynonyms TemplateHaskellQuotes 
    UnboxedTuples

  ghc-options:
    -Wall
    -Wcompat
    -Wcpp-undef
    -Widentities
    -Wmissing-export-lists

    -ddump-to-file
    -ddump-stg-final
    -ddump-simpl
    -dppr-cols=120
    -dsuppress-module-prefixes
    -dsuppress-uniques

  build-depends:
    , base >= 4.15.1 && < 4.17

library
  import:         common
  hs-source-dirs: src

  ghc-options:
    -- `-j3` is set (as opposed to `-j`) due to the small number of modules that 
    -- are exported by this package. This can sometimes help speed up compile 
    -- times by reducing thread contention.
    -j3

    -- This package does not benefit from higher specifying optimization levels
    -- such as `-O2`. 
    -O2

    -- `-fmax-simplifier-iterations` is set to keep compile times in check. 
    -- Most definitions in this package have had manual w/w transformations 
    -- applied, leaving little room for the simplifier to make improvements with
    -- more iterations. 
    -fmax-simplifier-iterations=20

  build-depends:
    , ghc-prim         >= 0.7.0  && < 0.9
    , mtl
    , primitive
    , prim-bool        >= 1.0.1  && < 1.1.0
    , prim-char        >= 1.0.0  && < 1.1.0
    , prim-int         >= 1.0.0  && < 1.1.0
    , prim-ord         >= 1.0.0  && < 1.1.0
    , template-haskell >= 2.17.0 && < 2.19
    , text 

  exposed-modules:
    Text.Emit

test-suite test
  import:         common
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Test.hs

  default-extensions:
    BlockArguments 

  ghc-options:
    -threaded
    -rtsopts
    "-with-rtsopts=-N"

  build-depends:
    , emit
    , hedgehog
    , tasty
    , tasty-hedgehog 

  other-modules: 
    Test.Compat
    Test.Core
    Test.SrcLoc
    Test.SrcLoc.Gen
    Test.SrcLoc.Ord