cabal-version: 2.4

name:       emit-ast
version:    1.0.0
author:     jacob leach
maintainer: jacobleach@protonmail.com
copyright:  2022, Jacob Leach
build-type: Simple

-- executable emit-ast
library
  default-language: Haskell2010
  -- main-is:          Main.hs

  default-extensions: 
    ApplicativeDo BlockArguments ImportQualifiedPost 

  ghc-options:      
    -Wall
    -Wcompat
    -Widentities

    -O2

    -ddump-to-file
    -ddump-stg-final
    -ddump-simpl
    -dppr-cols=120
    -dsuppress-module-prefixes

    -ddump-rule-firings 
    -ddump-rules
    -ddump-rule-rewrites

  build-depends:  
    , base >= 4.15.1 && < 4.17
    , emit
    , text >= 2.0

  exposed-modules: 
    EmitAST